Fixed toolbar z-index

--- a/App/assets/app.css
+++ b/App/assets/app.css
@@ -28,6 +28,7 @@ body{
   top: 0;
   padding: .5em 0;
   box-shadow: 0px 0px 6px #333333;
+  z-index: 100;
 }
 
 .flex-container.nav-menu{
